test_cases/fail/f07.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 0)
START IF
    PRINT: "yes"
END SCRIPT
